# readers_digest_extravaganzy

./: .env  .gitignore  README.md  _scoring_notes.md  config.example.yaml  config.yaml  master_plan.md  openalex-retrieval-plan.md  pyproject.toml  requirements.txt  run_digest.py  synthesis_model_spec.md
.claude/: settings.local.json
db/: database.py
services/: bluesky.py  builder.py  coauthors.py  fetcher.py  linkedin.py  openalex_client.py  scorer.py
shared/: types.py
tests/: smoke_test.py  test_abstract_by_doi.py  test_bluesky.py  test_fetcher.py  test_linkedin.py  test_openalex.py  test_scorer.py
